--- a/src/styles/map.css
+++ b/src/styles/map.css
@@ -1,3 +1,10 @@
-.map{
+.map {
     margin-top: 5vh;
+    width: 100%;
+    height: 100%;
 }
+
+.google-map {
+    width: 100%;
+    height: 100vh;
+  }
