log in with facebook is now possible

--- a/src/styles/logIn.css
+++ b/src/styles/logIn.css
@@ -8,8 +8,15 @@
 
 .logInImg {
     height: 3rem;
+    align-self: start;
+    padding-top: 0.3rem;
 }
 
 .logInImg:hover {
     cursor: pointer;
+}
+
+.externalLogInContainer{
+    display: flex;
+    flex-direction: column;
 }
