--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,9 +1,19 @@
 .header-container{
     height: 70vh;
-    background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://world.bicsport.com/media/catalog/category/BIC-Windsurf_Techno-Wind-Foil-130_7N4A9084_HR_2.jpg');
+    /* background: linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)), url('https://world.bicsport.com/media/catalog/category/BIC-Windsurf_Techno-Wind-Foil-130_7N4A9084_HR_2.jpg'); */
     background-size: cover;
     position: relative;
     text-align: center;
+}
+
+.background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -100;
+    height: 70vh;
+    object-fit: cover;
+    width: 100%;
 }
 
 .header-info {
@@ -12,6 +22,7 @@
 
 .header-info > h1 {
     color: white;
+    text-shadow: 1px 1px black;
     font-size: 3.875rem;
     font-weight: 600;
 }
