--- a/src/styles/spotInfo.css
+++ b/src/styles/spotInfo.css
@@ -6,3 +6,8 @@
     display: flex;
     justify-content: space-between;
 }
+
+.options-container > .dropdown {
+    margin-left:auto; 
+    margin-right:0;
+}
