--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -19,8 +19,9 @@
     border-radius: 10px;
 }
 
-.image-carousel-container {
-    margin-top: 2rem;
+.image-gallery-container {
+    margin: 2rem 5vw;
+    /* background-color: #838383; */
 }
 
 @media only screen and (max-width: 700px) {
