--- a/src/styles/addSpotForm.css
+++ b/src/styles/addSpotForm.css
@@ -1,19 +1,3 @@
-/* .addSpot-mapInfo-container {
-    display: table-cell;
+.saveSpotButton {
+    margin-top: 1rem;
 }
-
-.addSpot-map-container * {
-    height: 100%;
-}
-
-.addSpot-map-container * .map {
-    width: 45vw !important;
-    height: 50%;
-    margin-top: 0;
-    box-sizing: border-box;
-
-}
-
-.spot-container > div > h2{
-    padding-top: 5vh;
-} */
