--- a/src/styles/imageSelector.css
+++ b/src/styles/imageSelector.css
@@ -1,7 +1,7 @@
 .image-selector-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
