--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,4 +1,27 @@
 .footer-container {
     height: 20vh;
     background-color: #151515;
+    color: gray;
+    display: grid;
+    grid-template-columns: 25% auto 25%;
+    padding: 1rem 2rem;
+}
+
+/* .footer-left{
+} */
+
+.footer-center {
+    text-align: center;
+}
+
+.footer-right {
+    text-align: right;
+}
+
+.footer-right > * > a {
+    color: gray;
+}
+
+.footer-right > * > a:hover {
+    color: gray;
 }
