--- a/src/styles/sortbar.css
+++ b/src/styles/sortbar.css
@@ -10,3 +10,10 @@
 .searchfield {
     width: 30vw !important;
 } 
+
+@media only screen and (max-width: 700px) {
+    .searchfield {
+        width: auto !important;
+        margin-left: 2rem;
+    }
+}
