--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -35,6 +35,7 @@
 
     .spot-map-container {
         width: 100%;
-        height: 60vh;
+        height: 25vh;
+        margin-bottom: 0rem;
     }
 }
