--- a/src/styles/weather.css
+++ b/src/styles/weather.css
@@ -19,3 +19,11 @@
 .yr-btn{
     margin: 2rem 0;
 }
+
+@media only screen and (max-width: 700px) {
+    .weather-container {
+        margin: 2rem 0;
+        padding: 2rem 0 1rem 0;
+    }
+
+}
