--- a/src/styles/imageSelector.css
+++ b/src/styles/imageSelector.css
@@ -25,7 +25,7 @@
     width: 100px;
 }
 
-.close {
+.delete {
     /* display: none; */
     width: 10px;
     position: absolute;
@@ -34,7 +34,7 @@
     top: 4px;
 }
 
-.close:hover {
+.delete:hover {
     cursor: pointer;
     display: inline;
     right: 4px;
