peperations for release

--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -28,3 +28,10 @@
 .rating-img-card{
     height: 20px;
 }
+
+.no-overflow {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    height: 15%;
+}
