show who created spot

--- a/src/styles/spotInfo.css
+++ b/src/styles/spotInfo.css
@@ -28,3 +28,9 @@
 .pre-line {
     white-space: pre-line;
 }
+
+.created-by {
+    font-size: 0.9rem;
+    text-align: end;
+    margin-right: 1rem;
+}
