added roatation to image uploade

--- a/src/styles/imageUploade.css
+++ b/src/styles/imageUploade.css
@@ -25,3 +25,16 @@
 .input-field > p {
     margin-top: 10px ;
 }
+
+@keyframes rotation {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+  }
+
+.rotate{
+    animation: rotation 2s infinite linear;
+}
