--- a/src/styles/spot.css
+++ b/src/styles/spot.css
@@ -19,6 +19,10 @@
     border-radius: 10px;
 }
 
+.margin-top-1 {
+    margin-top: 1rem;
+}
+
 .image-gallery-container {
     margin: 2rem 5vw;
     /* background-color: #838383; */
