--- a/src/styles/sortbar.css
+++ b/src/styles/sortbar.css
@@ -8,11 +8,50 @@
 
 .searchfield {
     width: 30vw !important;
-} 
+}
+
+#dropdown-basic-button {
+    margin-right: 1rem;
+}
+
+.sortbar-left-side {
+    display: flex;
+    flex-direction: row;
+}
+
+.sortbar-checkbox-container {
+    margin-left: 1rem;
+}
+
+.sortbar-checkbox-container > label {
+    margin-left: 0.5rem;
+}
+
+.sortbar-checkbox-container > input:hover {
+    cursor: pointer;
+}
 
 @media only screen and (max-width: 700px) {
     .searchfield {
-        width: auto !important;
-        margin-left: 2rem;
+        width: 286px !important;
+    }
+
+    .sortbar-container {
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 0;
+    }
+
+    .sortbar-left-side {
+        justify-content: space-between;
+        width: 286px;
+    }
+
+    #dropdown-basic-button {
+        margin: 1rem 0;
+    }
+
+    .add-spot-button {
+        margin-top: 0 !important;
     }
 }
